force-app/main/default/objects/Enrollment__c/fields/Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Reason__c</fullName>
    <label>Dismissal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Successful Completion</fullName>
            </value>
            <value>
                <fullName>Did Not Complete</fullName>
            </value>
            <value>
                <fullName>Dropped Out</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Lost Contact</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Under Minimum Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>