force-app/main/default/objects/Enrollment__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <formula>TEXT(Program__r.Program_Type__c)</formula>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>