force-app/main/default/objects/Enrollment__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Program__r.Site__r.Name</formula>
    <label>Site</label>
    <type>Text</type>
</CustomField>