force-app/main/default/objects/Enrollment__c/fields/Site_Site_School__c.field-meta.xml
<CustomField>
    <fullName>Site_Site_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site (Site/School)</label>
    <referenceTo>Licensee_Sites__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>