force-app/main/default/objects/Enrollment__c/validationRules/Dismissal_Reason_Req_when_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Dismissal_Reason_Req_when_End_Date</fullName>
    <active>true</active>
    <description>Dismissal Reason must be provided when End Date is populated.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Date__c)),
    ISBLANK(TEXT(Dismissal_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Dismissal_Reason__c</errorDisplayField>
    <errorMessage>Dismissal Reason must be provided when End Date is populated.</errorMessage>
</ValidationRule>