force-app/main/default/objects/Enrollment__c/validationRules/End_Date_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_after_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be after Start Date, and Start Date must be set if End Date is populated.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Date__c)),
    OR(
        ISBLANK(Start_Date__c),
        End_Date__c &lt; Start_Date__c
    )
)</errorConditionFormula>
    <errorMessage>End Date must be after Start Date, and Start Date must be set if End Date is populated.</errorMessage>
</ValidationRule>