force-app/main/default/objects/Enrollment__c/validationRules/End_Date_must_be_Today_or_Earlier.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_Today_or_Earlier</fullName>
    <active>true</active>
    <description>End Date cannot be in the future. Please enter today’s date or earlier.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be in the future. Please enter today’s date or earlier or wait until the day the dismissal actually occurs</errorMessage>
</ValidationRule>