force-app/main/default/objects/Enrollment__c/validationRules/End_Date_Req_When_Dis_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Req_When_Dis_Reason</fullName>
    <active>true</active>
    <description>End Date must be provided when a Dismissal Reason is selected.</description>
    <errorConditionFormula>AND(
  ISBLANK(End_Date__c),
  NOT(ISBLANK(TEXT(Dismissal_Reason__c)))
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be provided when a Dismissal Reason is selected.</errorMessage>
</ValidationRule>