force-app/main/default/objects/Enrollment__c/listViews/Enrollment_View_Test.listView-meta.xml
<ListView>
    <fullName>Enrollment_View_Test</fullName>
    <columns>Program_Type__c</columns>
    <columns>Site__c</columns>
    <columns>Program__c</columns>
    <columns>Student__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Dismissal_Reason__c</columns>
    <columns>Site_Site_School__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Enrollment View Test</label>
</ListView>